--- a/chap-introduction.tex
+++ b/chap-introduction.tex
@@ -22,6 +22,7 @@ In this thesis, we present an implementation of a rendering system using the man
     \item the application of clustered deferred shading \citep{olsson2012clustered} as a performance optimization to many-light methods.
 \end{itemize}
 
+\noindent
 While lights and geometry are allowed to move, the system does not provide temporal stability in this case. Furthermore, it simulates only one light bounce, i.\,e. light is reflected only once before illuminating surfaces visible to the camera. However, the approach is not inherently limited in this regard and can be extended to multiple bounces in future work.
 
 \vspace{\baselineskip}
